feat: add user registration function
