# internal/app/schema/user_schema.go
@@ -1,0 +1,8 @@
+package schema
+
+type UserRegister struct {
+	Username   string `json:"username"`
+	Password   string `json:"password"`
+	Email      string `json:"email"`
+	VerifyCode string `json:"verify_code"`
+}
